--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
     <link href="/css/tailwind.css" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
-    <h1 class="text-4xl font-bold text-center text-blue-500">Hello world</h1>
+<body class="bg-gray-100">
+    <div class="px-8 py-12 space-y-6">
+        <img class="h-10" src="/static/img/sample_log.svg" alt="sample log" >
+        <img class="rounded-lg shadow-xl" src="/static/img/road-gf5a2dc765_1920.jpg" alt="load image from plxabay"/>
+        <h2 class="mt-6 text-2xl font-bold brand ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+            <span class="text-brands" >ullam, necessitatibus dolorum magnam quo voluptates itaque,</span>  
+            ea non ut autem exercitationem nostrum adipisci et iusto quae tenetur explicabo totam excepturi.
+        </h2>
+        <p class=" mt-6 text-gray-600">
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis eos, laborum harum officia, temporibus quaerat doloribus incidunt mollitia molestias nihil quisquam est veniam, ut obcaecati doloremque quos sunt voluptates beatae! 
+        </p>
+        <div class="mt-4">
+            <a
+              class="inline-block px-5 py-3 rounded-lg transform transition bg-brands hover: bg-brands-light hover:-translate-y-0.5 focus:ring-brands-light focus:ring-opacity-50 focus:outline-none focus:ring focus:ring-offset-2 active:bg-brands-dark uppercase tracking-wider font-semibold text-sm text-white shadow-lg sm:text-base"
+              href="#"
+            > Book your escape</a>
+        </div>
+    </div>
 </body>
 </html>
